Updated Footer, corrected horizontal spacing, decreased overall height.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -463,6 +463,7 @@ svg {
 	max-width: 1440px;
 	height: 90px;
 	max-height: 100px;
+	justify-self: center;
 	/* height: 7.5vw; */
 	/* justify-content: center; */
 }
@@ -2006,6 +2007,11 @@ area {
 	.contact-content p {
 		/* Unique to Contact */
 		padding: 0;
+	}
+
+	/* Footer */
+	.footer-left {
+		font-size: .9rem;	
 	}
 
 	/* Video Thumbnails */
